<resources>
    <string name="app_name">WeatherApp</string>

    <string name="dummy_city">Abuja</string>
    <string name="dummy_degree">23°</string>
    <string name="dummy_description">Cloudy</string>
    <string name="dummy_day">Monday</string>
    <string name="dummy_time">12:00</string>

    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="winds">Winds</string>
    <string name="weather_icon">Weather Icon</string>

    <string name="empty_degree">%.2f°</string>
    <string name="weather_loading_error_msg">Could not retrieve Weather Now.</string>
    <string name="invalid_city">Could not load weather for city entered, Please try a different city.</string>
    <string name="city_hint">Enter City</string>
    <string name="loading_new">Loading new weather, Please wait</string>
</resources>
