<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@android:color/white"
        android:id="@+id/list_item_time"
        android:layout_gravity="center"
        android:text="@string/dummy_time"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather_icon"
        android:id="@+id/list_item_icon"
        android:src="@drawable/sunny"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@android:color/white"
        android:id="@+id/list_item_avg_temp"
        android:layout_gravity="center"
        android:text="@string/dummy_degree"/>
</LinearLayout>