<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cloud_back"
    android:id="@+id/weather_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weather_city"
            android:gravity="center"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@android:color/white"
            android:text="@string/dummy_city"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weather_degree"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_big"
            android:textColor="@android:color/white"
            android:text="@string/dummy_degree"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weather_description"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@android:color/white"
            android:text="@string/dummy_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spacing_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weather_day"
                android:textSize="@dimen/text_size_tiny"
                android:textColor="@android:color/white"
                android:text="@string/dummy_day"
                android:layout_gravity="bottom"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/temperature"
                    android:id="@+id/bottom_icon_temp"
                    android:src="@drawable/white_thermometer"
                    android:layout_alignParentTop="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@id/bottom_icon_temp"
                    android:id="@+id/weather_current_max_temp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_tiny"
                    android:text="@string/dummy_degree"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/weather_current_max_temp"
                    android:layout_toEndOf="@id/bottom_icon_temp"
                    android:id="@+id/weather_current_min_temp"
                    android:textColor="@android:color/white"
                    android:text="@string/dummy_degree"
                    android:layout_marginTop="@dimen/spacing_small"
                    />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@android:color/white"/>

        <android.support.v17.leanback.widget.HorizontalGridView
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_view_height"
            android:id="@+id/weather_day_list"
            tools:listitem="@layout/weather_list_item"/>
    </LinearLayout>
</RelativeLayout>